ibuilder/tests/not_compile/unknown_attribute.stderr
error: unknown attribute
 --> $DIR/unknown_attribute.rs:3:16
  |
3 |     #[ibuilder(wibble_monster = 42)]
  |                ^^^^^^^^^^^^^^

error: unknown attribute
 --> $DIR/unknown_attribute.rs:8:12
  |
8 | #[ibuilder(wibble_monster = 42)]
  |            ^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute.rs:14:12
   |
14 | #[ibuilder(wibble_monster = 42)]
   |            ^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute.rs:21:16
   |
21 |     #[ibuilder(wibble_monster = 42)]
   |                ^^^^^^^^^^^^^^
